--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                     <span class="number wow rotateIn" data-wow-delay=".5s">1</span>
                                     <div class="text">
                                         <h3><span class="id-color">Spanish</span></h3>
-                                        <p>Soy de Venezuela por lo que el español es mi idioma nativo</p>
+                                        <p>Soy de Venezuela por lo que el español es mi idioma nativo.</p>
                                     </div>
                                 </div>
                             </div>
@@ -272,7 +272,7 @@
                                     <span class="number wow rotateIn" data-wow-delay="1s">2</span>
                                     <div class="text">
                                         <h3><span class="id-color">English</span></h3>
-                                        <p>Nothing to important to say, the language we all need to learn</p>
+                                        <p>Nothing important to say, the language we all need to learn.</p>
                                     </div>
                                 </div>
                             </div>
@@ -300,7 +300,7 @@
                                     <span class="number wow rotateIn" data-wow-delay="1.25s">4</span>
                                     <div class="text">
                                         <h3><span class="id-color">Learning Czech</span></h3>
-                                        <p>Jsem v Praze, a abys tu mohl žít, musíš mluvit česky</p>
+                                        <p>Jsem v Praze, a abys tu mohl žít, musíš mluvit česky.</p>
                                     </div>
                                 </div>
                             </div>
@@ -421,13 +421,13 @@
 
                                             <br>
                                             <br>
-                                            - Contribute to the development of a web-based software appointment management to give companies and people which main business is through attending people with appoinement the right tool to evolve
+                                            - Contribute to the development of a web-based software appointment management to give companies and people which main business is through attending people with appoinement the right tool to evolve.
                                             <br>
                                             <br>
-                                            - I worked and lead some of the design and implementation of a comprehensive backend system that allowed business owners to efficiently manage appoiments, client informatin, inventory and personnel directly from the platform
+                                            - I worked and lead some of the design and implementation of a comprehensive backend system that allowed business owners to efficiently manage appoiments, client informatin, inventory and personnel directly from the platform.
                                             <br>
                                             <br>
-                                            - Integrate advanced schedulling capabilities, making sure that the business in our software could offer more than one services with more than one personal at a time in their personal pages
+                                            - Integrate advanced schedulling capabilities, making sure that the business in our software could offer more than one services with more than one personal at a time in their personal pages.
                                         </p>
                                     </li>
                                     <li class="d_timeline-item">
@@ -439,16 +439,16 @@
 
                                             <br>
                                             <br>
-                                            - To develop and implement the dynamics system to monitor and manage inventory, including food and material stocks in storage ensuring efficient delivery and replenishment when needed
+                                            - To develop and implement the dynamics system to monitor and manage inventory, including food and material stocks in storage ensuring efficient delivery and replenishment when needed.
                                             <br>
                                             <br>
-                                            - Develooped functionalities for tracking maintenace needs (e.g., lighting repairs, painting) accross client facilities making with the integration (for larger clients) the creation of maps of the facilities making it very easy for the clients open a ticket and communicate with the operators
+                                            - Develooped functionalities for tracking maintenace needs (e.g., lighting repairs, painting) accross client facilities making with the integration (for larger clients) the creation of maps of the facilities making it very easy for the clients open a ticket and communicate with the operators.
                                             <br>
                                             <br>
-                                            - Enhanced events plannign and logistical support for our clients in order to manage much better the food supplies and the necessary equipment and employees
+                                            - Enhanced events plannign and logistical support for our clients in order to manage much better the food supplies and the necessary equipment and employees.
                                             <br>
                                             <br>
-                                            - Creating a smooth communication system between the clients and our company
+                                            - Creating a smooth communication system between the clients and our company.
                                             <br>
                                             <br>
 
@@ -466,7 +466,7 @@
                                     <li class="d_timeline-item">
                                         <h3 class="d_timeline-title">2024</h3>
                                         <p class="d_timeline-text"><span class="d_title">Czech Language</span><span class="d_company">CŽU</span>
-                                        I am currently enrolled in an intesive course of Czech Language</p>
+                                        I am currently enrolled in an intesive course of Czech Language.</p>
                                     </li>
                                 </ul>
                             </div>
