change color of letter in projects section

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                             <a class="wow"  href="pantry-project.html">
                                 <div class="card-image-1 mod-d" data-tilt>
                                     <div class="d-text text-center">
-                                        <h3>Pantry Manager</h3>
+                                        <h3 style="color: black;">Pantry Manager</h3>
                                     </div>
                                     <img src="./src/images/projects/pantry-manager-title.webp" class="img-fluid" alt="">
                                 </div>
@@ -358,7 +358,7 @@
                             <a class="wow" href="school-taken-app.html">
                                 <div class="card-image-1 mod-d" data-tilt>
                                     <div class="d-text text-center">
-                                        <h3>School Manager</h3>
+                                        <h3 style="color: black;">School Manager</h3>
                                     </div>
                                     <img src="./src/images/projects/school-manager-title.webp" class="img-fluid" alt="">
                                 </div>
@@ -368,7 +368,7 @@
                             <a class="wow" href="sudoku-solver.html">
                                 <div class="card-image-1 mod-d" data-tilt>
                                     <div class="d-text text-center">
-                                        <h3>Sudoku Solver</h3>
+                                        <h3 style="color: black;">Sudoku Solver</h3>
                                     </div>
                                     <img src="./src/images/projects/sudoku-solver-titlte.webp" class="img-fluid" alt="">
                                 </div>
@@ -378,7 +378,7 @@
                             <a class="wow" href="e-commerce.html">
                                 <div class="card-image-1 mod-d" data-tilt>
                                     <div class="d-text text-center">
-                                        <h3>E-Commerce</h3>
+                                        <h3 style="color: black;">E-Commerce</h3>
                                     </div>
                                     <img src="./src/images/projects/e-commerce.webp" class="img-fluid" alt="">
                                 </div>
@@ -388,7 +388,7 @@
                             <a class="wow" title="Chess Bot" href="chess-bot.html">
                                 <div class="card-image-1 mod-d" data-tilt>
                                     <div class="d-text text-center">
-                                        <h3>Chess Bot</h3>
+                                        <h3 style="color: black;">Chess Bot</h3>
                                     </div>
                                     <img src="./src/images/projects/chess-bot-title-2.webp" class="img-fluid" alt="">
                                 </div>
