correct grammatical errors

--- a/index.html
+++ b/index.html
@@ -74,14 +74,6 @@
             <!-- page preloader close -->
 
             <!-- float text begin -->
-            <div class="float-text">
-                <div class="de_social-icons">
-                    <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-instagram fa-lg"></i></a>
-                </div>
-                <span>Follow Me</span>
-            </div>
             <!-- float text close -->
 
             <!-- load external content begin -->
@@ -417,17 +409,17 @@
                                         <p class="d_timeline-text"><span class="d_title">Backend Engineer</span><span class="d_company">Contactemos</span>
                                             Contacemos was developing a product called <a href="https://kumbio.com/">kumbio</a>, which is a software to simplify appoinment scheduling and business management.
 
-                                            As my main job in this company was to:
+                                            At Contactemos, I was part of the engineering team responsible for developing Kumbio, a web application designed to be a management system for service-based businesses such as dental clinics, beauty salons, consultancies, among others. Some of my key contributions to this project were:
 
                                             <br>
                                             <br>
-                                            - Contribute to the development of a web-based software appointment management to give companies and people which main business is through attending people with appoinement the right tool to evolve.
+                                            - Developed and designed a robust backend capable of managing the clients, inventory, and appointments of our clients. This system was able to help many businesses in simplifying their processes, making it easier and faster to manage.
                                             <br>
                                             <br>
-                                            - I worked and lead some of the design and implementation of a comprehensive backend system that allowed business owners to efficiently manage appoiments, client informatin, inventory and personnel directly from the platform.
+                                            - Created the backend for each client to be able to have their personal page within our system. This way, each of them would have their own personal and professional page with just a click.
                                             <br>
                                             <br>
-                                            - Integrate advanced schedulling capabilities, making sure that the business in our software could offer more than one services with more than one personal at a time in their personal pages.
+                                            - Created advanced scheduling features which allowed for the accommodation of multiple services and staff availability within a single booking interface. Making something that was very complex to manage, into something very easy and user-friendly, for both our clients and our clients' customers.
                                         </p>
                                     </li>
                                     <li class="d_timeline-item">
@@ -435,20 +427,20 @@
                                         <p class="d_timeline-text"><span class="d_title">Backend Engineer</span><span class="d_company">Induservis</span>
 
                                             Induservis is a company that provides maintenance and logistics services to a variety of clients, including restaurants, schools, and other businesses.
-                                            As my main job in Induservis was to create and design the backend structure for a web based app to controls a company.
+                                            At Induservis, my primary responsibility was to create and design the backend structure for a web-based app to control the logistics and maintenance for other businesses.
 
                                             <br>
                                             <br>
-                                            - To develop and implement the dynamics system to monitor and manage inventory, including food and material stocks in storage ensuring efficient delivery and replenishment when needed.
+                                            - Developed and implemented a dynamic system to monitor and manage inventory, including food and material stocks in storage, ensuring efficient delivery and replenishment when needed.
                                             <br>
                                             <br>
-                                            - Develooped functionalities for tracking maintenace needs (e.g., lighting repairs, painting) accross client facilities making with the integration (for larger clients) the creation of maps of the facilities making it very easy for the clients open a ticket and communicate with the operators.
+                                            - Developed functionalities for tracking maintenance needs (e.g., lighting repairs, painting) across client facilities. For larger clients, this included the creation of facility maps, making it very easy for clients to open a ticket and communicate with the operators.
                                             <br>
                                             <br>
-                                            - Enhanced events plannign and logistical support for our clients in order to manage much better the food supplies and the necessary equipment and employees.
+                                            - Enhanced event planning and logistical support for our clients to better manage food supplies, necessary equipment, and employees.
                                             <br>
                                             <br>
-                                            - Creating a smooth communication system between the clients and our company.
+                                            - Created a smooth communication system between the clients and our company, facilitating more effective and efficient interactions.
                                             <br>
                                             <br>
 
